--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "mpdf/mpdf": "^8.2",
         "pharaonic/laravel-seo": "^1.1",
         "print-filament/print": "^1.3",
+        "spatie/laravel-medialibrary": "^11.20",
         "spatie/laravel-permission": "^6.4",
         "stichoza/google-translate-php": "^5.1",
         "ysfkaya/filament-phone-input": "*"
